--- a/daterangepicker-bs2.css
+++ b/daterangepicker-bs2.css
@@ -23,6 +23,10 @@
   margin: 4px;
 }
 
+.daterangepicker .extra {
+  margin: 4px;
+}
+
 .daterangepicker .ranges {
   width: 160px;
   text-align: left;
